--- a/women/templates/includes/navbar.html
+++ b/women/templates/includes/navbar.html
@@ -35,6 +35,21 @@
             </ul>
             </div>
         </li>
+        {% if request.user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}">Вийти</a>
+        </li>
+        <li class="nav-item">
+          <h3>{{ user.username }}</h3>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'register' %}">Реєстрація</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'login' %}">Ввійти</a>
+        </li>
+        {% endif %}
       </ul>
       <form class="d-flex">
         <input class="form-control me-sm-2" type="search" placeholder="Search">
